// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should match snapshot with bold text 1`] = `
<span
  className="sc-bdvvaa cWUSQK"
  color="green"
>
  Online
</span>
`;

exports[`Badge should match snapshot with simple text 1`] = `
<span
  className="sc-bdvvaa cyUIYY"
  color="green"
>
  Online
</span>
`;
